fix: poster container and copyright notice overlap

--- a/assets/sass/_title_meta.scss
+++ b/assets/sass/_title_meta.scss
@@ -24,6 +24,7 @@
 			}
 
 			.titlemeta-poster-notice {
+				padding: 0;
 				padding-top: 10px;
 				font-size: 12px;
 				color: $grey-color-darker;
